--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="brand">
             <i class="fa-brands fa-github"></i>
-            <h1>Huy Pro Vip No.1</h1>
+            <h1>Huy123</h1>
           </div>
           <i class="fa-solid fa-bars" id="menuIcon" onclick="toggle()"></i>
       <div class="Navbar" id="nav">
