--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
     <title>Responsive Header</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fontawesome-free-6.0.0-web/css/all.css" />
+   
   </head>
   <body>
     <script>
-      const toggle = function() {
-        document.getElementById('nav').classList.toggle('navactive');
-      }
+      function myFunction() {
+	var x = document.getElementById("nav");
+	if (x.style.display == "none") {
+	  x.style.display = "inline";
+	} else {
+	  x.style.display = "none";
+	}
+  }
     </script>
     <div class="header">
-
         <div class="brand">
             <i class="fa-brands fa-github"></i>
-            <h1>Huy123</h1>
+            <h1>Brand</h1>
           </div>
-          <i class="fa-solid fa-bars" id="menuIcon" onclick="toggle()"></i>
+          <button  onclick="myFunction()"><i class="fa-solid fa-bars"></i></button>
       <div class="Navbar" id="nav">
         <div class="SearchBox">
           <input type="text" placeholder="Search here ..." />
@@ -30,7 +35,7 @@
       <ul>
         <li> <i class="fa-solid fa-house-chimney" id="headIcon" ></i> <a href="#"> Home </a></li>
         <li> <i class="fa-solid fa-circle-user" id="headIcon" ></i> <a href="#"> Profile </a></li>
-        <li> <i class="fa-solid fa-circle-question" id="headIcon" ></i> <a href="#"></i> Help </a></li>
+        <li> <i class="fa-solid fa-circle-question" id="headIcon" ></i> <a href="#"> Help </a></li>
         <li> <i class="fa-solid fa-lock" id="headIcon" ></i> <a href="#"> Account </a></li>
         <li> <i class="fa-solid fa-right-from-bracket" id="headIcon" ></i> <a href="#"> Sign Out </a></li>
       </ul>
